added text to describe purpose of website

--- a/yoruba website/about.html
+++ b/yoruba website/about.html
@@ -10,7 +10,7 @@
 
     <body>
         <h1> About </h1>
-        <p> Come learn with me about the Yoruba culture! As I am Nigerian-Americna with both of my parents coming from the Yoruba tribe, I intend to learn about my culture to be able to pass it down to my children and to avoid it dying down. </p>
+        <p> Come learn with me about the Yoruba culture! As I am Nigerian-Americna with both of my parents coming from the Yoruba tribe, I intend to learn about my culture to be able to pass it down to my children and to avoid it dying down. It is commonly said that my generation will unlikely be able to pass down culture and traditions due to being uneducated about them. This website serves as a starting ground to teach others and myselfs and keep different learning tools in one platform. </p>
         <nav class="navigation">
             <a href="home.html" target="_self">Home</a>
             <a href="about.html" target="_self">About</a>
