--- a/yoruba website/home.html
+++ b/yoruba website/home.html
@@ -18,6 +18,7 @@
             <a href="customs" target="_self">Customs</a>
             <a href="resources.html"> Learn Yoruba here</a>
         </nav>
-        <h2>Don't want the cu</h2>
+        <h2>Do you desire to learn the Yoruba language? Tired of family, family friends, aunties and uncles always stating how you don't know the langauge? </h2>
+        <h3>You have come to the right place :)</h3>
     </body>
 </html>
